[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ephyspy"
description = "Package to extract summary statistics from electrophysiological data."
readme = "README.md"
authors = [
    {name = "Jonas Beck"}
]
license = {text = "GPLv3"}
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.3",
    "matplotlib>=3.4.2",
    "scipy>=1.9.1",
    "scikit-learn>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["ephyspy"]
package-dir = {"" = "."}

[tool.setuptools.exclude-package-data]
"*" = ["*.tests.*", "tests.*", "*.tests", "tests"]

[tool.setuptools.dynamic]
version = {attr = "ephyspy.__version__.__version__"}

[tool.pytest]
pep8maxlinelength = 88
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.flake8]
max-line-length = 88
exclude = ["docs", "build", "dist", ".ipynb_checkpoints"]

[tool.isort]
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip_glob = ".ipynb_checkpoints"
known_first_party = ["ephyspy", "tests"]
known_third_party = ["matplotlib", "numpy", "pytest", "scipy", "setuptools", "six", "sklearn", "pandas"]
multi_line_output = 3

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.12.3",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "seaborn>=0.13.2",
]
