[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ephyspy"
description = "Package to extract summary statistics from electrophysiological data."
readme = "README.md"
authors = [
    {name = "Jonas Beck"}
]
requires-python = ">=3.12"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.3",
    "matplotlib>=3.4.2",
    "scipy>=1.9.1",
    "scikit-learn>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["ephyspy"]
package-dir = {"" = "."}
# FIX: temporary workaround until https://github.com/pypa/setuptools/issues/4759 is fixed
license-files = []

[tool.setuptools.exclude-package-data]
"*" = ["*.tests.*", "tests.*", "*.tests", "tests"]

[tool.setuptools.dynamic]
version = {attr = "ephyspy.__version__.__version__"}

[tool.pytest]
pep8maxlinelength = 88
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black",
    "ipython>=8.12.3",
    "isort",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "seaborn>=0.13.2",
]
