[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ephyspy"
version = "0.0.8"
description = "Package to extract summary statistics from electrophysiological data."
readme = "README.md"
authors = [
    {name = "Jonas Beck"}
]
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.5.3",
    "matplotlib>=3.4.2",
    "scipy>=1.9.1",
    "scikit-learn>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "ipython>=8.12.3",
    "isort",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["ephyspy"]

[tool.pytest.ini_options]
pep8maxlinelength = 88
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.isort]
profile = "black"
